--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -19,8 +19,8 @@
         h1 {
             position: absolute;
             top: 20px;
-            right: 250px;
-            font-size: 3.0em;
+            right: 280px;
+            font-size: 2.5em;
             color: white;
             text-shadow: 2px 2px 4px #000;
         }
@@ -40,10 +40,10 @@
         }
         #messages {
             flex: 1;
-            width: 98%;
+            width: 100%;
             display: flex;
-            align-items: flex-end;
-            justify-content: center;
+            flex-direction: column; /* 이 부분이 메시지를 세로로 쌓게 합니다 */
+           
             margin-bottom: 20px;
             border: 1px solid #ccc;
             padding: 15px;
