--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -59,12 +59,27 @@
         .message {
             margin-bottom: 15px;
             align-self: flex-start;
+            font-size: 1.3em;
         }
         .user {
-            color: blue;
+            color: black;
+            background-color: #E0F7FA; /* 연한 푸른색 */
+            padding: 10px;
+            border-radius: 10px;
+            margin: 5px 0;
+            width: fit-content;
+            max-width: 80%;
+            align-self: flex-end;
         }
         .bot {
-            color: green;
+            color: black;
+            background-color: #ECEFF1; /* 연한 회색 */
+            padding: 10px;
+            border-radius: 10px;
+            margin: 5px 0;
+            width: fit-content;
+            max-width: 80%;
+            align-self: flex-start;
         }
         #message-form {
             display: flex;
