--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Book Bot</h1>
     <form id="question-form">
-        <label for="question">당신이 원하는 책은?: </label>
+        <label for="question">당신이 원하는 책은?ㅎㅎ: </label>
         <input type="text" id="question" name="question" required>
         <button type="submit">질문하기</button>
     </form>
