--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -16,11 +16,25 @@
             justify-content: flex-start;
             padding: 50px;
         }
+        #video-container {
+            position: relative;
+            top: -2cm;
+            right: -2cm;
+            width: 50%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        video {
+            width: 100%; /* 수정: container 내부에 꽉 차도록 */
+            height: auto;
+        }
         h1 {
             position: absolute;
             top: 20px;
-            right: 280px;
-            font-size: 2.5em;
+            right: 240px;
+            font-size: 3.0em;
             color: white;
             text-shadow: 2px 2px 4px #000;
         }
@@ -42,7 +56,7 @@
             flex: 1;
             width: 100%;
             display: flex;
-            flex-direction: column; /* 이 부분이 메시지를 세로로 쌓게 합니다 */
+            flex-direction: column;
            
             margin-bottom: 20px;
             border: 1px solid #ccc;
@@ -63,7 +77,7 @@
         }
         .user {
             color: black;
-            background-color: #E0F7FA; /* 연한 푸른색 */
+            background-color: #E0F7FA;
             padding: 10px;
             border-radius: 10px;
             margin: 5px 0;
@@ -73,7 +87,7 @@
         }
         .bot {
             color: black;
-            background-color: #ECEFF1; /* 연한 회색 */
+            background-color: #ECEFF1;
             padding: 10px;
             border-radius: 10px;
             margin: 5px 0;
@@ -116,6 +130,12 @@
     </style>
 </head>
 <body>
+    <div id="video-container">
+        <video controls autoplay loop muted>
+            <source src="static/video/video.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
     <h1>무엇이든 물어책보살</h1>
     <div id="chatbox">
         <div id="messages">
@@ -132,7 +152,6 @@
             </div>
         </form>
     </div>
-
     <script>
         document.getElementById('message-form').addEventListener('submit', async function(event) {
             event.preventDefault();
@@ -146,7 +165,7 @@
             }
     
             const userMessage = messageInput.value;
-            messagesDiv.innerHTML += `<div class="message user">You: ${userMessage}</div>`;
+            messagesDiv.innerHTML += <div class="message user">You: ${userMessage}</div>;
             messageInput.value = '';
     
             const response = await fetch('/ask', {
@@ -158,7 +177,7 @@
             });
     
             const data = await response.json();
-            messagesDiv.innerHTML += `<div class="message bot">AI: ${data.response}</div>`;
+            messagesDiv.innerHTML += <div class="message bot">AI: ${data.response}</div>;
             messagesDiv.scrollTop = messagesDiv.scrollHeight;
         });
     
