--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -158,7 +158,7 @@
             });
     
             const data = await response.json();
-            messagesDiv.innerHTML += `<div class="message bot">AI: ${data.response}</div>`;
+            messagesDiv.innerHTML += `<div class="message bot">AI: ${data.response}<br><br>${data.prompt}</div>`;
             messagesDiv.scrollTop = messagesDiv.scrollHeight;
         });
     
