--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -178,7 +178,7 @@
             })
             .then(response => response.json())
             .then(data => {
-                messagesDiv.innerHTML += `<div class="message bot">AI: ${data.response}</div>`;
+                messagesDiv.innerHTML += `<div class="message bot">AI: ${data.response}<br><br>${data.prompt}</div>`;
                 messagesDiv.scrollTop = messagesDiv.scrollHeight; // 채팅창을 가장 최근 메시지 위치로 스크롤
             })
             .catch(error => console.error('Error:', error));
